--- a/client/main.html
+++ b/client/main.html
@@ -1,3 +1,4 @@
 <head>
 	<title>Void: a Meteor Starter Template</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
